maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:26: error: not enough arguments for method force: (n: Int, x: Int, y: Int)Unit.
Unspecified value parameter y.
  force(X,Y)
       ^